Set max width to projects to stop disproportionate stretching on large monitors

--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -20,6 +20,7 @@
     overflow: hidden;
     @include tablet {
       width: 35%;
+      max-width: 700px;
       // height: 100%;
     }
   }
